--- a/css/project.css
+++ b/css/project.css
@@ -74,7 +74,9 @@ body {
 
 /* Images */
 .img-cover { 
-  width: 100%; 
+  width: 100%;
+ margin-left: auto; 
+  margin-right: auto; 
   height: auto; 
   border-radius: 0.5rem; 
 }
