--- a/css/faq.css
+++ b/css/faq.css
@@ -202,6 +202,7 @@ html, body {
   background:#0f1218;
   display:none;
   line-height:1.6;
+  color: #EAEAEA;
 }
 .faq-card.active {
   border-color: #C97B32 !important;
